add and delete files

--- a/Frontend/templates/product_in_order_frame_cart.ejs
+++ b/Frontend/templates/product_in_order_frame_cart.ejs
@@ -1,4 +1,4 @@
-<div class="oneCart">
+-<div class="one_active_order_cart">
     <div class="lines"></div>
     <%= pizza.title %> (<%= size %>)
     <div><img src="assets/images/size-icon.svg"><%= pizza[size].size %><img src="assets/images/weight.svg"><%= pizza[size].weight %></div>
