--- a/Backend/views/common/header.ejs
+++ b/Backend/views/common/header.ejs
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title><%= pageTitle %> - Pizza</title>
+    <title><%= pageTitle %> - Client Service</title>
 
     <!-- Bootsrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -17,26 +17,13 @@
 <body>
 
 
-<div class="navbar navbar-fixed-top upFrame">
-    <div class="logo">
-        <div class="title-1"><h3>Pizza</h3></div>
-        <div class="title-2"><h3>KMA</h3></div>
-        <img class="upperdisc" src="assets/images/discount.svg">
-    </div>
+<div class="navbar navbar-fixed-top">
     <div class="top-row">
-        <span class="number hidden-xs" >(044) 222 5 222</span>
-        <span class="time hidden-sm hidden-xs">24 години\7 днів на тиждень</span>
-        <span class="del hidden-md hidden-sm hidden-xs">Безкоштовна доставка піци</span>
-        <button type="button" class="btn login">Ввійти</button>
+        <span class="date" id="date" ></span>
+        <button type="button" class="btn header_main">Головна</button>
+        <button type="button" class="btn header_client">Клієнти</button>
+        <button type="button" class="btn header_product">Продукція</button>
     </div>
-    <div class="down-row">Піцца</div>
+    <div class="fff"></div>
 </div>
-<div class="log">
-    <img  src="assets/images/discount.svg">
-    <div class="downLogo">
-        <div class="title-1--down"><h4><div>Цього</div><div>Тижня</div> <div> На все</div></h4></div>
-        <div class="title-2-down"><h4>-20%</h4></div>
-    </div>
-</div>
-
 
