add header frontend

--- a/Backend/views/common/header.ejs
+++ b/Backend/views/common/header.ejs
@@ -18,12 +18,13 @@
 
 
 <div class="navbar navbar-fixed-top">
-    <div class="top-row">
-        <span class="date" id="date" ></span>
-        <button type="button" class="btn header_main">Головна</button>
-        <button type="button" class="btn header_client">Клієнти</button>
-        <button type="button" class="btn header_product">Продукція</button>
+    <div class="header_top_row">
+        <div class="date" id="date" ></div>
+        <span class="button_group">
+            <button type="button" class="btn header_main">Головна</button>
+            <button type="button" class="btn header_client">Клієнти</button>
+            <button type="button" class="btn header_product">Продукція</button>
+        </span>
     </div>
-    <div class="fff"></div>
 </div>
 
