--- a/Frontend/www/assets/less/main.less
+++ b/Frontend/www/assets/less/main.less
@@ -1,5 +1,6 @@
 @mainColor: blue;
 
-@import "pizza/pizza-card";
-@import "pizza/pizza-order";
-@import "pizza/logotype";
+@import "clientBase/pizza-card";
+@import "clientBase/pizza-order";
+@import "clientBase/header";
+@import "clientBase/main-page";
