--- a/Frontend/www/assets/less/clientBase/header.less
+++ b/Frontend/www/assets/less/clientBase/header.less
@@ -4,8 +4,11 @@
   border-radius: 1%;
   background-color: lighten(@mainColor, 10%);
   padding: 15px;
+  position:fixed;
+  width:100%;
 
     .date {
+
       display: inline-block;
       color: white;
     }
@@ -38,4 +41,8 @@
       border-style: groove;
     }
   }
+}
+
+body{
+  background-color: rgba(151, 146, 234, 0.68);
 }
